# oxwm

./: .gitignore  BUGFIXES.md  Cargo.toml  PKGBUILD  PR Summary.md  UPDATES.md  default.nix  flake.nix  justfile  oxwm.desktop  readme.org  test-config.ron
.github/: FUNDING.yaml
resources/: PKGBUILD  oxwm.1  test-config.lua  test-config.ron
src/: config.rs  default_config.rs  errors.rs  keys.rs  lib.rs  main.rs  main.rs.backup  monitor.rs  size_hints.rs  tab_bar.rs  window_manager.rs
src/bar/: bar.rs  font.rs  mod.rs
src/bar/blocks/: battery.rs  clock.rs  datetime.rs  mod.rs  ram.rs  sep.rs  shell.rs  uname.rs
src/client/: mod.rs
src/config/: lua.rs  lua_api.rs  migrate.rs  mod.rs
src/keyboard/: handlers.rs  keycodes.rs  keysyms.rs  mod.rs
src/layout/: grid.rs  horizontal_scroll.rs  mod.rs  monocle.rs  normie.rs  tabbed.rs  tiling.rs
src/overlay/: error.rs  keybind.rs  mod.rs
templates/: config.lua  config.ron  config.rs  main.rs  oxwm.lua
