[package]
name = "oxwm"
version = "0.4.0"
edition = "2024"

[lib]
name = "oxwm"
path = "src/lib.rs"

[[bin]]
name = "oxwm"
path = "src/bin/main.rs"

[dependencies]
x11 = { version = "2.21", features = ["xlib", "xft"] }
x11rb = { version = "0.13", features = ["cursor", "xinerama"] }
anyhow = "1"
chrono = "0.4"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
